# myFirstRepoinAgenticSystems

./: pyproject.toml
api-github-search/: answer.md  github_api.py
api-security-ethics-assignment/: secure_api_request.py
eda-checklist/: iris_eda.py
matplotlib-visualization-assignment/: visualization.py
plotly-visualization-assignment/: plotly_visualization.py
python-data-assignment/: employee_role_checker.py  simple_contact_book.py  student_marks_analyzer.py  user_data_processing_system.py
python-data-inspection-assignment/: ai_data_inspection_pipeline.py  employee.csv
python-data-query-ranking-system-assignment/: data-query-ranking-system.py
python-data-validation-assignment/: data-preparation.py
python-files-assignment/: calculate_sum_and_average.py  number.txt
python-functions-assignment/: add_two_numbers.py  even_or_odd_checker.py  greeting_function.py  student_evaluation_system.py
python-fundamentals-assignment/: interactive-profile-builder.py  simple-accuracy-reporter.py  user-age-calculator.py
python-json-assignment/: api_response_processor.py  response.json
python-logic-assignment/: accessControlSystem.py  passOrFailChecker.py  secureTransactionValidator.py
python-loops-assignment/: first_multiple_of_7.py  number_printer.py  password_retry_system.py  score_evaluation_pipeline.py  skip_even_numbers.py  sum_until_zero.py
python-numpy-assignment/: data_normalization.py
python-pandas-cleaning-grouping-assignment/: pandas-cleaning-grouping.py
sql-query-assignment/: queries.txt  (+1 more)
sql-query-assignment-2/: assignment2.db  queries.txt
(+3 files in other folders)
