[project]
name = "masai-agentic-systems"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pathlib>=1.0.1",
    "plotly>=6.6.0",
    "requests>=2.33.0",
]
